@@ -143,6 +143,8 @@ $table->data["all_5"][1] = html_print_select ($label_type, 'label_type', 'agent_
 echo '<form method="post"
 	action="index.php?sec=gmap&sec2=godmode/reporting/visual_console_builder&tab=' . $activeTab  . '&id_visual_console=' . $visualConsole["id"] . '"
 	onsubmit="if (! confirm(\''.__('Are you sure to add many elements\nin visual map?').'\')) return false; else return check_fields();">';
+$table->size[0] = "20%";
+$table->size[1] = "80%";
 html_print_table ($table);
 
 echo '<div class="action-buttons" style="width: '.$table->width.'">';
