@@ -1,5 +1,15 @@
 2012-03-12 Miguel de Dios <miguel.dedios@artica.es>
 
+	* include/functions_html.php: into the function "html_print_select" removed
+	the hardcode style for the selectbox.
+	
+	* godmode/reporting/visual_console_builder.wizard.php: force the style of
+	content table of form.
+
+	Merged bugfix from trunk.
+
+2012-03-12 Miguel de Dios <miguel.dedios@artica.es>
+
 	* include/functions_visual_map.php,
 	include/ajax/visual_console_builder.ajax.php: apply format to graph in the
 	data when show value in percentile item.
